swagger for auth
